--- a/trunk/res/menu/fragment_filling.xml
+++ b/trunk/res/menu/fragment_filling.xml
@@ -3,5 +3,5 @@
     <item android:id="@+id/menu_addFilling"
         android:title="@string/menu_add"
         android:orderInCategory="100"
-        android:showAsAction="always" />
+        android:showAsAction="ifRoom" />
 </menu>
