--- a/res/layout/activity_edit_filling.xml
+++ b/res/layout/activity_edit_filling.xml
@@ -1,107 +1,72 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <View
-        android:id="@+id/half_screen_helper"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerHorizontal="true" />
+    <LinearLayout
+        style="@style/VehicleContainer"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/tv_edit_filling_fillupInformation"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:text="@string/edit_filling_tv_information" />
+        <TextView
+            android:id="@+id/tv_edit_filling_fillupInformation"
+            style="@style/sectionHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_filling_tv_information" />
 
-    <EditText
-        android:id="@+id/edt_edit_filling_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/half_screen_helper"
-        android:layout_below="@+id/tv_edit_filling_fillupInformation"
-        android:hint="@string/edit_filling_edt_price"
-        android:inputType="numberDecimal" >
+        <EditText
+            android:id="@+id/edt_edit_filling_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_filling_edt_price"
+            android:inputType="numberDecimal" >
 
-        <requestFocus />
-    </EditText>
+            <requestFocus />
+        </EditText>
 
-    <EditText
-        android:id="@+id/edt_edit_filling_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/tv_edit_filling_fillupInformation"
-        android:layout_toRightOf="@+id/edt_edit_filling_price"
-        android:hint="@string/edit_filling_edt_quantity"
-        android:inputType="numberDecimal" />
+        <EditText
+            android:id="@+id/edt_edit_filling_quantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_filling_edt_quantity"
+            android:inputType="numberDecimal" />
 
-    <EditText
-        android:id="@+id/edt_edit_filling_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/half_screen_helper"
-        android:layout_below="@+id/edt_edit_filling_quantity"
-        android:hint="@string/edit_filling_edt_distance"
-        android:inputType="numberDecimal" />
+        <EditText
+            android:id="@+id/edt_edit_filling_distance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_filling_edt_distance"
+            android:inputType="numberDecimal" />
 
-    <Button
-        android:id="@+id/btn_new_filling_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/edt_edit_filling_quantity"
-        android:layout_toRightOf="@+id/edt_edit_filling_distance" />
+        <Button
+            android:id="@+id/btn_new_filling_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <CheckBox
-        android:id="@+id/cb_edit_filling_notToTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/edt_edit_filling_distance"
-        android:text="@string/edit_filling_cb_notFilledToTop" />
+        <CheckBox
+            android:id="@+id/cb_edit_filling_notToTop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_filling_cb_notFilledToTop" />
 
-    <TextView
-        android:id="@+id/tv_edit_filling_extraData"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/cb_edit_filling_notToTop"
-        android:gravity="center"
-        android:text="@string/edit_filling_tv_extraData" />
+        <TextView
+            android:id="@+id/tv_edit_filling_extraData"
+            style="@style/sectionHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/edit_filling_tv_extraData" />
 
-    <TextView
-        android:id="@+id/tv_edit_filling_fuelType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignBottom="@+id/sp_edit_filling_fuelType"
-        android:layout_alignRight="@+id/half_screen_helper"
-        android:layout_below="@+id/tv_edit_filling_extraData"
-        android:text="@string/edit_filling_tv_fuelType"
-        android:gravity="center_vertical" />
+        <Spinner
+            android:id="@+id/sp_edit_filling_fuelType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/array_fueltype" />
 
-    <Spinner
-        android:id="@+id/sp_edit_filling_fuelType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/tv_edit_filling_extraData"
-        android:layout_toRightOf="@+id/tv_edit_filling_fuelType"
-        android:entries="@array/array_fueltype" />
+        <EditText
+            android:id="@+id/edt_edit_filling_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/edit_filling_edt_comment"
+            android:inputType="textMultiLine" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/edt_edit_filling_comment"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/sp_edit_filling_fuelType"
-        android:hint="@string/edit_filling_edt_comment"
-        android:inputType="textMultiLine" />
-
-
-</RelativeLayout>
+</ScrollView>
